--- a/OctagonPlatform/Views/Terminals/Details.cshtml
+++ b/OctagonPlatform/Views/Terminals/Details.cshtml
@@ -29,7 +29,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-cog" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Configuration", "GetConfiguration", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -58,7 +58,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-pie-chart" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("General Info", "GetGeneralInfo", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -87,7 +87,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-eject" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Cassettes", "GetCassettes", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -116,7 +116,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-sticky-note" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Notes", "GetNotes", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -145,7 +145,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-book" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Documents", "GetDocuments", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -174,7 +174,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-picture-o" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Pictures", "GetPictures", "Terminals", new { id = Model.Id },
                    new AjaxOptions
                    {
@@ -206,7 +206,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-list" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Contacts", "GetContacts", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
@@ -235,7 +235,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-money" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Vault Cash", "GetVaultCash", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
@@ -264,7 +264,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-credit-card" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Surcharge", "GetSurcharges", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
@@ -293,7 +293,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h3 class="panel-title texth3" style="font-size:25px;color:#4776a1">
-                        <i class="fa fa-info-circle" style="font-size:25px;color:#4776a1">
+                        <i class="fa fa-credit-card-alt" style="font-size:25px;color:#4776a1">
                         </i> @Ajax.ActionLink("Interchanges", "GetInterchanges", "Terminals", new { id = Model.Id, terminalId = Model.TerminalId },
                    new AjaxOptions
                    {
