--- a/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
+++ b/OctagonPlatform/Views/Terminals/Sections/Contacts.cshtml
@@ -17,7 +17,7 @@
                        UpdateTargetId = "AddContact",
                        LoadingElementId = "loading3",
                        InsertionMode = InsertionMode.Replace,
-                       HttpMethod = "Get"
+                       HttpMethod = "GET"
                    },
                    htmlAttributes: new
                    {
