--- a/OctagonPlatform/Views/Schedule/Index.cshtml
+++ b/OctagonPlatform/Views/Schedule/Index.cshtml
@@ -1,151 +1,103 @@
-﻿@model IEnumerable<OctagonPlatform.Models.Schedule>
+﻿@model OctagonPlatform.Views.Schedule.ScheduleVM
 @using OctagonPlatform.Models
 @{
     ViewBag.Title = "Index";
+    var list = Model.List;
+    var user = Model.User;
 }
 
-<h2>Index</h2>
 
-<p>
 
-    @Ajax.ActionLink("Create", // <-- Text to display
-
-                                     "Create", // <-- Action Method Name
-                                     new AjaxOptions
-                                     {
-                                         UpdateTargetId = "ScheduleForm", // <-- DOM element ID to update
-                                         InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
-                                         HttpMethod = "GET", // <-- HTTP method
-                                         OnSuccess = "Success"
-                                     })
-
+<p>   
 </p>
-
-<table class="table">
-    <tr>
-
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Repeats)
-        </th>
-      
-        <th>
-            Recurrence
-        </th>
-        <th>
-            Time(CST)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.StartDate)
-        </th>
-        <th>
-           Stop Date
-        </th>
-        <th></th>
-    </tr>
-
-    @foreach (var item in Model)
-    {
-    <tr>
-
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Repeats)
-        </td>
+<h1>Report Subscriptions </h1>
+<h3>Manage Schedules</h3>
+<div class="panel panel-primary">
+    <div class="panel-heading">
+        <a name="ankle"></a>
+        <div class="row">
+            <div class="col-lg-6"> <h3 class="panel-title" style="font-size: 26px;">Schedules</h3></div>
+            <div class="col-lg-6" style="text-align:right">
+                <i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
+                <a href="#" id="create" style="color:white;font-size: 22px;">Add New Schedule</a>
+            </div>
+        </div>
        
-        <td>
-            @if (item.GetType() == typeof(ScheduleDaily))
-    {
-        <p> Every @(((ScheduleDaily)item).RepeatOn) Day(s)</p>
-}
-            @if (item.GetType() == typeof(ScheduleWeekly))
-    {
-        <p> Every @(((ScheduleWeekly)item).RepeatOnWeeks) Week(s)</p>
-        <p> @(((ScheduleWeekly)item).RepeatOnDaysWeeks) </p>
-}
-            @if (item.GetType() == typeof(ScheduleMonthly))
-    {
-        <p> Day @(((ScheduleMonthly)item).RepeatOnDay) Every @(((ScheduleMonthly)item).RepeatOnMonth) Month(s)</p>
-}
-            @if (item.GetType() == typeof(ScheduleMonthlyRelative))
-    {
-        <p> The @(((ScheduleMonthlyRelative)item).RepeatOnFirst) @(((ScheduleMonthlyRelative)item).RepeatOnDay) Every  @(((ScheduleMonthlyRelative)item).RepeatOnMonth) Month(s)</p>
-}
-        </td>
-        <td>
-            @if (item.GetType() == typeof(ScheduleDaily))
-    {
-        <p> @(((ScheduleDaily)item).Time)</p>
-}
-            @if (item.GetType() == typeof(ScheduleWeekly))
-    {
-        <p> @(((ScheduleWeekly)item).Time)</p>
+      
 
-}
-            @if (item.GetType() == typeof(ScheduleMonthly))
-    {
-        <p> @(((ScheduleMonthly)item).Time) </p>
-}
-            @if (item.GetType() == typeof(ScheduleMonthlyRelative))
-    {
-        <p> @(((ScheduleMonthlyRelative)item).Time) </p>
-}
-            @if (item.GetType() == typeof(ScheduleOnce))
-    {
-        <p> @(((ScheduleOnce)item).Time) </p>
-}
-        </td>
-        <td>
-            @item.StartDate.ToShortDateString()
-        </td>
-        <td>
-            @if (item.GetType() == typeof(ScheduleDaily))
-    {
-        <p> @(((ScheduleDaily)item).StopDate)</p>
-}
-            @if (item.GetType() == typeof(ScheduleWeekly))
-    {
-        <p> @(((ScheduleWeekly)item).StopDate)</p>
+    </div>
+    <div class="panel-body">
+        <div class="form-group">
+            @Html.LabelFor(model => model.User, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.User, new { htmlAttributes = new { @class = "form-control", @id = "user" } })
+                @Html.HiddenFor(model => model.UserId, new { id = "userid" })
+                @Html.ValidationMessageFor(model => model.User, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <p>&nbsp;</p>
+       
+        <div id="List" >
+            @Html.Partial("List", list)
 
-}
-            @if (item.GetType() == typeof(ScheduleMonthly))
-    {
-        <p> @(((ScheduleMonthly)item).StopDate) </p>
-}
-            @if (item.GetType() == typeof(ScheduleMonthlyRelative))
-    {
-        <p> @(((ScheduleMonthlyRelative)item).StopDate) </p>
-}
+        </div>
+
+
+    </div>
+</div>
+<div class="panel panel-primary" style="padding:0px;">
+    <div class="panel-heading">
+        <a name="ankle2"></a>
+        <h3 class="panel-title" style="font-size: 26px;">Schedule Details</h3>
+    </div>
+    <div class="panel-body">
+        <div id="ScheduleForm" style="position:relative;margin:0 auto;width:50%"></div>
         
-        </td>
-        <td>
-          
-            @Ajax.ActionLink("Edit", // <-- Text to display
+    </div>
+</div>
+        @section Scripts {
 
-                                 "Edit", // <-- Action Method Name
-                                  new { id = item.ID },
-                                 new AjaxOptions
-                                 {
-                                     UpdateTargetId = "ScheduleForm", // <-- DOM element ID to update
-                             InsertionMode = InsertionMode.Replace, // <-- Replace the content of DOM element
-                             HttpMethod = "GET", // <-- HTTP method
-                             OnSuccess = "Success"
-                                 })|
-            @Html.ActionLink("Delete", "Delete", new { id = item.ID })
-        </td>
-    </tr>
-    }
+            <script>
+        var url = '@Url.Action("AutoUser", "Users")';
+    var urlcreate = '@Url.Action("Create", "Schedule")';
+                var urltable = '@Url.Action("List", "Schedule")';
+                callankle();
+        $(function () {
+            $('#user').autocomplete({
+                source: url,
+                select: function (event, ui) {
 
-</table>
-<div id="ScheduleForm" style="position:relative;margin:0 auto;width:50%"></div>
-@section Scripts {
+                    $("#user").val(ui.item.label); // display the selected text
+                    $("#userid").val(ui.item.value); // save selected id to hidden input
+                    $.get(urltable, { userId: $("#userid").val() }, function (data) {
 
-    <script>
-        function Success() {
+                        $("#List").html(data);
+                    });
+                    return false;
+                }
+            });
+            $('#user').blur(function () {
+                if ($('#user').val() == "") {
+                    $('#user').attr("placeholder", "< ALL >");
+                    $.get(urltable, { userId: 0 }, function (data) {
+
+                        $("#List").html(data);
+                    });
+                }
+
+            });
+            $("#create").click(function () {
+
+                $.get(urlcreate, { userId: $("#userid").val() }, function (data) {
+                    $("#ScheduleForm").html(data);
+                    Success();
+                    
+                });
+            });
+
+        })
+                function Success() {
+                    callankle2();
             $("#StartDate").datepicker({
                 dateFormat: "mm/dd/yy"
             });
@@ -153,14 +105,15 @@
                 dateFormat: "mm/dd/yy"
             });
             $("#btn").click(function () {
-               
+
                 var str = "";
                 $("input:checked").each(function () {
-                   
+
                     str += $(this).val() + "_";
                 });
                 str = str.substr(0, str.length - 1);
                 $("#RepeatOnDaysWeeks").val(str);
+                $("#UserId").val($("#userid").val());
             });
             $("#Repeats").change(function () {
                 var val = $(this).val();
@@ -211,10 +164,8 @@
                     }
                 }
             });
-        }    
+        }
+            </script>
 
 
-    </script>
-
-
-}
+        }
