--- a/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Scripts.cshtml
@@ -20,6 +20,7 @@
 @Scripts.Render("~/Octagon/assets/data/AMS-data.js")
 @Scripts.Render("~/Octagon/assets/data/demmoney-data.js")
 @Scripts.Render("~/Octagon/assets/data/CashEverywhere-data.js")
+@Scripts.Render("~/Octagon/assets/data/vendbot-data.js")
 @Scripts.Render("~/Octagon/assets/vendor/dist/js/sb-admin-2.js")
 
 @Scripts.Render("~/bundles/jqueryui")
