Update CEW and VB

--- a/OctagonPlatform/Views/Octagon/VendBot.cshtml
+++ b/OctagonPlatform/Views/Octagon/VendBot.cshtml
@@ -124,7 +124,7 @@
     <!-- END TRANSACTIONS BY LOCATION -->
 </div>
 
-<!-- ALERTS -->
+<!-- SALES BY PRODUCT -->
 <div class="panel panel-default">
     <div class="panel-heading">
         <i class="fa fa-bar-chart-o fa-fw"></i> Sales By Product
