--- a/OctagonPlatform/Views/Octagon/DemMoney.cshtml
+++ b/OctagonPlatform/Views/Octagon/DemMoney.cshtml
@@ -4,13 +4,20 @@
 }
 
 <div class="row">
-    <a href="http://democraticmoney.azurewebsites.net" target="_blank">
-        <div class="col-lg-12" style="width: 500px">
-            <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                 Democratic Money
+        <a href="http://democraticmoney.azurewebsites.net" target="_blank">
+            <div class="col-lg-6" style="width: 35%; padding-bottom: 9px; margin: 45px 0 20px;">
+                <div style="font-size: 20px; color: #fff;">
+                    <div class="btn" style="border: 1px solid #5f5b5b; background-color: #9a989d">Platform <i class="fa fa-external-link"></i></div>
+                </div>
+            </div>
+        </a>
+        <div class="col-lg-6">
+            <h1 class="page-header" style="color: #859298; font-size: 30px; border-bottom: none;">
+                Democratic Money
             </h1>
         </div>
-    </a>
+        <div class="col-lg-3">
+        </div>
 </div>
 <div class="row">
     <div class="col-lg-8">
