--- a/OctagonPlatform/Views/Octagon/MicroLoans.cshtml
+++ b/OctagonPlatform/Views/Octagon/MicroLoans.cshtml
@@ -7,13 +7,19 @@
 
 <div class="row">
     <a href="@Url.Action("MicroLoans", "Octagon", new {logo = ViewBag.Logo, businessName = ViewBag.BusinessName})">
-        <div class="col-lg-12" style="width: 500px">
-            <h1 class="page-header" style="color: #859298; font-size: 30px;">
-                 Money 4 People
-            </h1>
+        <div class="col-lg-6" style="width: 35%; padding-bottom: 9px; margin: 45px 0 20px;">
+            <div style="font-size: 20px; color: #fff;">
+                <div class="btn" style="border: 1px solid #5f5b5b; background-color: #9a989d">Platform <i class="fa fa-external-link"></i></div>
+            </div>
         </div>
     </a>
-        <!-- /.col-lg-12 -->
+    <div class="col-lg-6">
+        <h1 class="page-header" style="color: #859298; font-size: 30px; border-bottom: none;">
+            Money 4 People
+        </h1>
+    </div>
+    <div class="col-lg-3">
+    </div>
 </div>
 
 <div class="row">
