--- a/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
+++ b/OctagonPlatform/Views/Shared/Sections/Footer.cshtml
@@ -1,5 +1,5 @@
 ﻿<footer id="footer">
     <div>
-        <p style="color: white; font-family: Helvetica">Copyright (c) 2017 Octagon</p>
+        <p style="color: white; font-family: Helvetica">Copyright &copy; 2017 Octagon</p>
     </div>
 </footer>
