--- a/OctagonPlatform/Views/Shared/_LayoutHome.cshtml
+++ b/OctagonPlatform/Views/Shared/_LayoutHome.cshtml
@@ -18,7 +18,9 @@
 <div id="page-wrapper">
     @RenderBody()
 </div>
-
+<div class="row">
+    @Html.Partial("Sections/Footer")
+</div>
 </body>
 
 </html>
