Added Terminals button to Cryptoxone.cshtml

--- a/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
+++ b/OctagonPlatform/Views/Octagon/Cryptoxone.cshtml
@@ -83,6 +83,27 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
+                            Terminals
+                            <span class="caret"></span>
+                        </button>
+                        <ul class="dropdown-menu pull-right" role="menu">
+                            <li>
+                                <a href="#">Terminal 1</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 2</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 3</a>
+                            </li>
+                            <li>
+                                <a href="#">Terminal 4</a>
+                            </li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
             <!-- /.panel-heading -->
