Corrected Charts for AMS, CEW, DemMoney, VendBot

--- a/OctagonPlatform/Views/Octagon/AMS.cshtml
+++ b/OctagonPlatform/Views/Octagon/AMS.cshtml
@@ -42,7 +42,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -74,7 +83,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -149,7 +167,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -181,7 +208,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -257,7 +293,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -289,7 +334,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -325,7 +379,16 @@
                         <a href="#">Weekly</a>
                     </li>
                     <li>
+                        <a href="#">BiWeekly</a>
+                    </li>
+                    <li>
                         <a href="#">Monthly</a>
+                    </li>
+                    <li>
+                        <a href="#">Quarterly</a>
+                    </li>
+                    <li>
+                        <a href="#">Yearly</a>
                     </li>
                 </ul>
             </div>
