--- a/OctagonPlatform/Views/Octagon/CashEverywhere.cshtml
+++ b/OctagonPlatform/Views/Octagon/CashEverywhere.cshtml
@@ -40,7 +40,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -69,7 +78,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -121,7 +139,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <i class="fa fa-bar-chart-o fa-fw"></i> Transactions by Country
+                <i class="fa fa-bar-chart-o fa-fw"></i> Transactions by City
                 <div class="pull-right">
                     <div class="btn-group">
                         <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown">
@@ -136,14 +154,23 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </div>
             <div class="panel-body">
-                <div id="cew-transactionsbyCountry-chart"></div>
+                <div id="cew-transactionsbyCity-chart"></div>
             </div>
         </div>
     </div>
