--- a/OctagonPlatform/Views/Octagon/VendBot.cshtml
+++ b/OctagonPlatform/Views/Octagon/VendBot.cshtml
@@ -43,7 +43,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -75,7 +84,16 @@
                                 <a href="#">Weekly</a>
                             </li>
                             <li>
+                                <a href="#">BiWeekly</a>
+                            </li>
+                            <li>
                                 <a href="#">Monthly</a>
+                            </li>
+                            <li>
+                                <a href="#">Quarterly</a>
+                            </li>
+                            <li>
+                                <a href="#">Yearly</a>
                             </li>
                         </ul>
                     </div>
@@ -86,34 +104,34 @@
                         </button>
                         <ul class="dropdown-menu pull-right" role="menu">
                             <li>
-                                <a href="#">Location 1</a>
+                                <a href="#">Aventura Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 2</a>
+                                <a href="#">The Falls Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 3</a>
+                                <a href="#">International Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 4</a>
+                                <a href="#">Dolphin Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 5</a>
+                                <a href="#">Westland Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 6</a>
+                                <a href="#">Dadeland Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 7</a>
+                                <a href="#">Mall of The Americas</a>
                             </li>
                             <li>
-                                <a href="#">Location 8</a>
+                                <a href="#">Lincoln Road Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 9</a>
+                                <a href="#">Sunset Place Mall</a>
                             </li>
                             <li>
-                                <a href="#">Location 10</a>
+                                <a href="#">Sawgrass Mall</a>
                             </li>
                         </ul>
                     </div>
@@ -149,7 +167,16 @@
                         <a href="#">Weekly</a>
                     </li>
                     <li>
+                        <a href="#">BiWeekly</a>
+                    </li>
+                    <li>
                         <a href="#">Monthly</a>
+                    </li>
+                    <li>
+                        <a href="#">Quarterly</a>
+                    </li>
+                    <li>
+                        <a href="#">Yearly</a>
                     </li>
                 </ul>
             </div>
@@ -160,34 +187,34 @@
                 </button>
                 <ul class="dropdown-menu pull-right" role="menu">
                     <li>
-                        <a href="#">Product 1</a>
+                        <a href="#">Frito Lay</a>
                     </li>
                     <li>
-                        <a href="#">Product 2</a>
+                        <a href="#">Cheetos</a>
                     </li>
                     <li>
-                        <a href="#">Product 3</a>
+                        <a href="#">Pretzels</a>
                     </li>
                     <li>
-                        <a href="#">Product 4</a>
+                        <a href="#">Snickers</a>
                     </li>
                     <li>
-                        <a href="#">Product 5</a>
+                        <a href="#">M&M</a>
                     </li>
                     <li>
-                        <a href="#">Product 6</a>
+                        <a href="#">Skittles</a>
                     </li>
                     <li>
-                        <a href="#">Product 7</a>
+                        <a href="#">Water</a>
                     </li>
                     <li>
-                        <a href="#">Product 8</a>
+                        <a href="#">Pepsi</a>
                     </li>
                     <li>
-                        <a href="#">Product 9</a>
+                        <a href="#">Sprite</a>
                     </li>
                     <li>
-                        <a href="#">Product 10</a>
+                        <a href="#">Gatorade</a>
                     </li>
                 </ul>
             </div>
